--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewpoint" content="width=device-wdith, initial-scale=1.0">
         <title>underwater</title>
         <link rel="stylesheet" href="style.css">
-        
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
         <p>BLIBBLOBBLURB</p>
