--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewpoint" content="width=device-wdith, initial-scale=1.0">
-        <title>underwater</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-    </head>
-    <body>
-        <p>BLIBBLOBBLURB</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>your title</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"
+    link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
+
+</head>
+<body>
+    <img src="put your image in your folder and type in file name" alt="caption your file"
+    style="width: 400px;height: 350px;">
+    <p>text caption of image</p>
+    <br>
+    <br>
+    <br>
+
+    <img src="put your image in your folder and type in file name" alt="caption your file"
+    style="width: 350px;">
+    <p>text caption of image</p>
+</body>
 </html>
