--- a/index.html
+++ b/index.html
@@ -3,29 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>your title</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"
-    link rel="stylesheet" href="styles.css">
+    <title>meeesheeellllleee</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        img{
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
-<body>
-    <img src="put your image in your folder and type in file name" alt="caption your file"
-    style="width: 400px;height: 350px;">
-    <p>text caption of image</p>
-    <br>
-    <br>
-    <br>
+<style>
+h1 {
+  font-size: 100px;
+}
 
-    <img src="put your image in your folder and type in file name" alt="caption your file"
-    style="width: 350px;">
-    <p>text caption of image</p>
+h2 {
+  font-size: 30px;
+}
+
+p {
+  font-size: 70px;
+}
+</style>
+<body>
+    <h1>BLIBBLOBBLIB</h1>
+    <p>blib<br>blurb<br>blob<br>blip<br></p>
+    <img src="SUPERJELLY.png"
+    width="600" 
+    height="500">
+    <br><br><br>
+    <img src="SUPERJELLY.png" alt="bubbles"
+    style="width:600px;height:400px;" >
+    <p>blib<br>blurb<br>blob<br>blip<br></p>
+    <br><br><br><br><br><br>
+
+<video width="480" height="854" controls>
+    <source src="techniques.mp4" type="video/mp4">
+    <source src="techniques.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+  </video>
+
 </body>
 </html>
