--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p {
 <body>
     <h1>BLIBBLOBBLIB</h1>
     <p>blib<br>blurb<br>blob<br>blip<br></p>
-    <img src="SUPERJELLY.png"
+    <img src="Artboard 1.png"
     width="600" 
     height="500">
     <br><br><br>
